--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
+    "react-markdown": "^4.3.1",
+    "react-router-dom": "^5.1.2",
     "axios": "^0.19.2",
-    "js-cookie": "^2.2.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-markdown": "^4.1.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0"
+    "js-cookie": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
